[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/single_day_dynamic.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/fonts/single_day_large.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/StartScene.gd" type="Script" id=3]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1120.0
margin_bottom = -800.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameContainer" type="HBoxContainer" parent="."]
margin_left = 204.0
margin_top = 288.0
margin_right = 977.0
margin_bottom = 337.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NameContainer"]
margin_top = 9.0
margin_right = 180.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 1 )
text = "Enter you name:"
align = 2

[node name="NameField" type="LineEdit" parent="NameContainer"]
margin_left = 184.0
margin_right = 784.0
margin_bottom = 49.0
rect_min_size = Vector2( 600, 0 )
caret_blink = true
caret_blink_speed = 0.5

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 208.0
margin_top = 462.0
margin_right = 955.0
margin_bottom = 597.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="Button" parent="HBoxContainer"]
margin_right = 200.0
margin_bottom = 135.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateButton" type="Button" parent="HBoxContainer"]
margin_left = 204.0
margin_right = 404.0
margin_bottom = 135.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
text = "Create"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 124.884
margin_top = 83.3243
margin_right = 978.884
margin_bottom = 217.324
custom_fonts/font = ExtResource( 2 )
text = "Angels of Delta"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 733.879
margin_top = 445.326
margin_right = 1025.88
margin_bottom = 541.326
[connection signal="text_changed" from="NameContainer/NameField" to="." method="_on_NameField_text_changed"]
[connection signal="pressed" from="HBoxContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="HBoxContainer/CreateButton" to="." method="_on_CreateButton_pressed"]
